# rogue

./: CMakeLists.txt
src/algebra/: CMakeLists.txt
src/algebra/include/: algebra.hpp
src/algebra/include/algebra/: vector.hpp
src/ecs/: CMakeLists.txt
src/ecs/include/: ecs.hpp
src/ecs/test/: CMakeLists.txt
src/game/: CMakeLists.txt
src/game/src/: game.cpp
src/sdl/: CMakeLists.txt
src/sdl/include/: algebra.hpp  console.hpp
src/sdl/src/: console.cpp
src/typelist/: CMakeLists.txt
src/typelist/include/: typelist.hpp
